--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -39,7 +39,7 @@ jobs:
       id-token: write  
 
     environment:
-      name: Testing
+      name: Production
       url: ${{ steps.deployment.outputs.page_url }}
 
     runs-on: ubuntu-lastest
